Add files via upload
Moved all of game.play()'s code into PlayCommand.execute(), so all the workings are now in one place.
Play command and GameMap now working.

This version is right before allowing Enemy and Item's stringName to be inserted right at EnemyType or ItemType.