@@ -1,36 +1,98 @@
 package io.muic.zork.enemy;
 
+import java.lang.reflect.InvocationTargetException;
+import java.util.Arrays;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
+
 
 public class EnemyFactory {
 
+    private static final List<EnemyType> REGISTERED_ENEMY = Arrays.asList(
+            EnemyType.values()
+    );
 
-    // HashMap housing all entity's class.
-    private static Map<EnemyType, Class> enemyClassMap = new HashMap<>() {{
-        // Initiate and fill up HashMap
-        EnemyType[] enemyTypes = EnemyType.values();
-        for (int i = 0; i < enemyTypes.length; i++) {
-            put(enemyTypes[i], enemyTypes[i].getEnemyClass());
-        }
-    }};
+    private static final Map<String, Enemy> ENEMY_MAP = new HashMap<>();
 
-    public static Enemy createEnemy(EnemyType enemyType) { // eg. enemyType.SKELETON
-        Class enemyClass = enemyClassMap.get(enemyType);
-        if (enemyClass != null) {
+    static {{
+        for (EnemyType enemyType: REGISTERED_ENEMY) {
             try {
-                // If enemyClass is valid, create and initiate them
-                Enemy enemy = (Enemy) enemyClass.newInstance();
+                Enemy enemy = (Enemy) enemyType.getEnemyClass().getDeclaredConstructor().newInstance();
                 enemy.initialize(enemyType.getMaxHP(), enemyType.getAttackPower());
-                return enemy;
-            } catch (IllegalAccessException e) {
-                e.printStackTrace();
+                ENEMY_MAP.put(enemy.getEnemyString(), enemy);
             } catch (InstantiationException e) {
+                e.printStackTrace();
+            } catch (InvocationTargetException e) {
+                e.printStackTrace();
+            } catch (NoSuchMethodException e) {
+                e.printStackTrace();
+            } catch (IllegalAccessException e) {
                 e.printStackTrace();
             }
         }
-        throw new IllegalArgumentException("Unknown enemyType");
+    }}
+
+    /**
+     * From the String name of an enemy, return Enemy
+     * @param enemy
+     * @return
+     */
+    public static Enemy getEnemy(String enemy) {
+        return ENEMY_MAP.get(enemy.trim().toLowerCase());
     }
+
+    public static List<String> getAllEnemy() {
+        return ENEMY_MAP.keySet().stream().collect(Collectors.toList());
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+//
+//    // HashMap housing all entity's class.
+//    private static Map<EnemyType, Class> enemyClassMap = new HashMap<>() {{
+//        // Initiate and fill up HashMap
+//        EnemyType[] enemyTypes = EnemyType.values();
+//        for (int i = 0; i < enemyTypes.length; i++) {
+//            put(enemyTypes[i], enemyTypes[i].getEnemyClass());
+//        }
+//    }};
+//
+//    public static Enemy createEnemy(EnemyType enemyType) { // eg. enemyType.SKELETON
+//        Class enemyClass = enemyClassMap.get(enemyType);
+//        if (enemyClass != null) {
+//            try {
+//                // If enemyClass is valid, create and initiate them
+//                Enemy enemy = (Enemy) enemyClass.newInstance();
+//                enemy.initialize(enemyType.getMaxHP(), enemyType.getAttackPower());
+//                return enemy;
+//            } catch (IllegalAccessException e) {
+//                e.printStackTrace();
+//            } catch (InstantiationException e) {
+//                e.printStackTrace();
+//            }
+//        }
+//        throw new IllegalArgumentException("Unknown enemyType");
+//    }
 
 
 
